# face-anti-spoofing

./: .gitignore  README.md  api.py  api_docs.md  deployment_guide.md  main.py  pyproject.toml
