[project]
name = "face-anti-spoofing"
version = "1.0.0"
description = "Face Anti-Spoofing Inference using MiniFASNet"
authors = [
    { name = "Yakhyo", email = "yakhyo@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "uniface>=3.0.0",
    "onnxruntime>=1.15.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0"
]
gpu = [
    "torch>=2.0.0",
    "torchvision>=0.15.0"
]

# When the `cpu` extra is requested, we instruct uv to fetch PyTorch from the CPU-only index.
# This prevents downloading massive CUDA binaries on Linux machines.
# Note: On macOS (arm64/x86_64), pip/uv defaults to cpu/mps versions anyway, so this 
# optimization specifically benefits Linux deployments.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "extra == 'cpu'" },
]
